manually arrange nodes around zero to have separate zero node